--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "posttest": "npm run lint"
   },
   "devDependencies": {
-    "gts": "^3.0.3",
-    "typescript": "^4.0.3",
-    "@types/node": "^14.11.2"
+    "@types/node": "^20.8.9",
+    "gts": "^5.2.0",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/google-apps-script": "^1.0.20"
+    "@google/clasp": "^2.4.2",
+    "@types/google-apps-script": "^1.0.76"
   }
 }
