feat: add ukulele F chord
Signed-off-by: Martin Chodur <m.chodur@seznam.cz>

--- a/docs/assets/chords/requirements.txt
+++ b/docs/assets/chords/requirements.txt
@@ -1,2 +1,2 @@
-git+git://github.com/fusakla/python-fretboard#egg=fretboard
+git+https://github.com/fusakla/python-fretboard#egg=fretboard
 cairosvg
